[package]
name = "canyon-executor"
version = "0.1.0"
authors = ["Canyon Labs <https://github.com/canyon-network>"]
description = "Canyon node implementation in Rust."
edition = "2018"
license = "GPL-3.0"
homepage = "https://canyon-network.io"
repository = "https://github.com/canyon-network/canyon/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.1" }
trie-root = "0.16.0"

sc-executor = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "master" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "master" }

canyon-primitives = { path = "../primitives" }
canyon-runtime = { path = "../runtime" }

[dev-dependencies]
criterion = "0.3.0"
wat = "1.0"

sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-externalities = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "master" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-contracts = { git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-grandpa = { git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-im-online = { git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-indices = { git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-session = { git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-treasury = { git = "https://github.com/paritytech/substrate", branch = "master" }
substrate-test-client = { git = "https://github.com/paritytech/substrate", branch = "master" }

[features]
wasmtime = [
	"sc-executor/wasmtime",
]
wasmi-errno = [
	"sc-executor/wasmi-errno",
]
stress-test = []
