[package]
name = "canyon-executor"
version = "0.1.0"
authors = ["Canyon Labs <https://github.com/canyon-network>"]
description = "Canyon node implementation in Rust."
edition = "2018"
license = "GPL-3.0"
homepage = "https://canyon-network.io"
repository = "https://github.com/canyon-network/canyon/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.3" }
trie-root = "0.16.0"

sc-executor = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
sp-core = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
sp-keystore = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
sp-io = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
sp-state-machine = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
sp-trie = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
frame-benchmarking = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }

canyon-primitives = { path = "../primitives" }
canyon-runtime = { path = "../runtime" }

[dev-dependencies]
criterion = "0.3.0"
wat = "1.0"

sp-application-crypto = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
sp-consensus-babe = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
sp-externalities = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
sp-runtime = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
frame-support = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
frame-system = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
pallet-balances = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
pallet-contracts = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
pallet-grandpa = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
pallet-im-online = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
pallet-indices = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
pallet-session = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
pallet-timestamp = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
pallet-transaction-payment = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
pallet-treasury = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
substrate-test-client = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }

[features]
wasmtime = [
	"sc-executor/wasmtime",
]
wasmi-errno = [
	"sc-executor/wasmi-errno",
]
stress-test = []
