[package]
name = "canyon-executor"
version = "0.1.0"
authors = ["Canyon Labs <https://github.com/canyon-network>"]
description = "Canyon node implementation in Rust."
edition = "2021"
license = "GPL-3.0"
homepage = "https://canyon-network.io"
repository = "https://github.com/canyon-network/canyon/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }

canyon-runtime = { path = "../runtime" }
