[package]
name = "canyon-inspect"
version = "0.1.0"
authors = ["Canyon Labs <https://github.com/canyon-network>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.1" }
derive_more = "0.99"
log = "0.4.8"
structopt = "0.3.8"

sc-cli = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
sc-client-api = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
sc-executor = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
sc-service = { git = "https://github.com/canyon-network/substrate", default-features = false , branch = "initial-network" }

sp-blockchain = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
sp-core = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
sp-runtime = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
