[package]
name = "canyon-primitives"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }

sp-application-crypto = { git = "https://github.com/canyon-network/substrate", branch = "w3f-grant-1", default-features = false }
sp-core = { git = "https://github.com/canyon-network/substrate", branch = "w3f-grant-1", default-features = false }
sp-runtime = { git = "https://github.com/canyon-network/substrate", branch = "w3f-grant-1", default-features = false }
frame-system = { git = "https://github.com/canyon-network/substrate", branch = "w3f-grant-1", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-system/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-runtime/std",
]
