[package]
name = "canyon-primitives"
version = "0.1.0"
authors = ["Canyon Labs <https://github.com/canyon-network>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.3", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

sp-application-crypto = { git = "https://github.com/canyon-network/substrate", default-features = false , branch = "initial-network" }
sp-core = { git = "https://github.com/canyon-network/substrate", default-features = false , branch = "initial-network" }
sp-inherents = { git = "https://github.com/canyon-network/substrate", default-features = false , branch = "initial-network" }
sp-runtime = { git = "https://github.com/canyon-network/substrate", default-features = false , branch = "initial-network" }

frame-system = { git = "https://github.com/canyon-network/substrate", default-features = false , branch = "initial-network" }

[features]
default = ["std"]
std = [
	"codec/std",
    "scale-info/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-runtime/std",
	"frame-system/std",
]
