[package]
name = "canyon-rpc"
version = "0.1.0"
authors = ["Canyon Labs <https://github.com/canyon-network>"]
edition = "2018"
license = "GPL-3.0"
homepage = "https://canyon-network.io"
repository = "https://github.com/canyon-network/canyon/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
jsonrpc-core = "18.0.0"
serde = { version = "1.0.102", features = ["derive"] }

sc-client-api = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
sc-consensus-babe = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
sc-consensus-babe-rpc = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
sc-consensus-epochs = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
sc-chain-spec = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
sc-finality-grandpa = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
sc-finality-grandpa-rpc = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
sc-keystore = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
sc-rpc = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
sc-rpc-api = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
sc-sync-state-rpc = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
sc-transaction-pool-api = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
sp-api = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
sp-block-builder = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
sp-blockchain = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
sp-core = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
sp-keystore = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
sp-consensus = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
sp-consensus-babe = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
sp-runtime = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }

pallet-transaction-payment-rpc = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
substrate-frame-rpc-system = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }

canyon-primitives = { path = "../primitives" }
canyon-runtime = { path = "../runtime" }
cp-permastore = { path = "../primitives/permastore" }

cc-rpc = { path = "../client/rpc" }
cc-rpc-api = { path = "../client/rpc-api" }
