[package]
name = "canyon-rpc"
version = "0.1.0"
authors = ["Canyon Labs <https://github.com/canyon-network>"]
edition = "2021"
license = "GPL-3.0"
homepage = "https://canyon-network.io"
repository = "https://github.com/canyon-network/canyon/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
jsonrpsee = { version = "0.22", features = ["server"] }
serde = { version = "1.0.102", features = ["derive"] }

sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sc-consensus-babe = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sc-consensus-epochs = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sc-chain-spec = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sc-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sc-consensus-grandpa-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sc-keystore = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sc-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sc-rpc-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-consensus = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-consensus-babe = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }

pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }

canyon-primitives = { path = "../primitives" }
canyon-runtime = { path = "../runtime" }
cp-permastore = { path = "../primitives/permastore" }

cc-rpc = { path = "../client/rpc" }
cc-rpc-api = { path = "../client/rpc-api" }
